--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -11,64 +11,39 @@
     <property name="title">Administrasie</property>
     <property name="titlebar">
       <object class="GtkHeaderBar" id="nav-bar">
+        <property name="decoration-layout">menu:minimize,maximize,close</property>
         <property name="hexpand">True</property>
-        <property name="show-title-buttons">False</property>
         <property name="title-widget">
           <object class="GtkBox" id="nav-bar-box">
+            <property name="halign">center</property>
             <property name="hexpand">True</property>
             <property name="valign">center</property>
             <property name="vexpand">True</property>
-            <child>
-              <object class="GtkLabel" id="organization-name">
-                <property name="css-name">app_label</property>
-                <property name="ellipsize">middle</property>
-                <property name="halign">start</property>
-                <property name="justify">fill</property>
-                <property name="label">Business Name</property>
-                <property name="margin-start">20</property>
-                <accessibility>
-                  <state name="expanded">False</state>
-                </accessibility>
-              </object>
-            </child>
             <child type="end">
               <object class="GtkSearchEntry" id="business-name-search">
                 <property name="css-classes">search_bar</property>
-                <property name="halign">center</property>
                 <property name="hexpand">True</property>
                 <property name="placeholder-text">Soek vir besigheid...</property>
+                <property name="search-delay">200</property>
                 <property name="vexpand">True</property>
                 <property name="vexpand-set">True</property>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkButton" id="minimize">
-                <property name="focusable">True</property>
-                <property name="halign">end</property>
-                <property name="has-frame">False</property>
-                <property name="label">Bêre</property>
-                <property name="margin-start">20</property>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkButton" id="maximize">
-                <property name="focusable">True</property>
-                <property name="halign">end</property>
-                <property name="has-frame">False</property>
-                <property name="label">Grooter/Kleiner</property>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkButton" id="exit">
-                <property name="halign">end</property>
-                <property name="has-frame">False</property>
-                <property name="label">Uit</property>
-                <property name="margin-end">20</property>
               </object>
             </child>
           </object>
         </property>
         <property name="valign">start</property>
+        <child>
+          <object class="GtkLabel" id="organization-name">
+            <property name="css-name">app_label</property>
+            <property name="ellipsize">middle</property>
+            <property name="halign">start</property>
+            <property name="justify">fill</property>
+            <property name="label">Business Name</property>
+            <accessibility>
+              <state name="expanded">False</state>
+            </accessibility>
+          </object>
+        </child>
       </object>
     </property>
     <child>
