--- a/gui/admin-system.css
+++ b/gui/admin-system.css
@@ -18,16 +18,13 @@ app-label {
         transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
-/*.outlined_button:hover {*/
-/*        background-color: #3c3c3c;*/
-/*}*/
-
 .outlined_button:active {
         background-color: #1a75ff;
         transform: scale(0.96);
 }
 
-save_button {
+.save_button {
+	min-height: 25px;
         padding: 5px 10px;
         font-weight: bold;
         border-radius: 5px;
@@ -36,11 +33,11 @@ save_button {
         transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
-save_button:hover {
+.save_button:hover {
         background-color: #3c3c3c;
 }
 
-save_button:active {
+.save_button:active {
         background-color: #1a75ff;
         transform: scale(0.96);
 }
@@ -50,7 +47,7 @@ save_button:active {
 }
 
 .delete_button {
-        box-shadow: 0px 0px 1px 1px rgba(0, 102, 255, 0.2);
+	box-shadow: 0px 0px 1px 1px rgba(251, 153, 2, 0.2);
 }
 
 listview {
@@ -71,16 +68,16 @@ columnview {
 	margin-right: 20px;
         font-weight: bold;
         border-radius: 5px;
-        box-shadow: inset 0px 0px 1px 1px rgba(251, 153, 2, 0.2);
+        box-shadow: inset 0px 0px 1px 1px rgba(0, 102, 255, 0.2);
 }
 
 .search_bar:focus-within {
 	outline: none;
-	box-shadow: 0px 0px 2px 2px rgba(251, 153, 2, 0.2);
+	box-shadow: 0px 0px 2px 2px rgba(0, 102, 255, 0.2);
 }
 
 app_label {
-        color: #FB9902;
+        color: #1a75ff;
 	font-size: 20px;
 	font-weight: bold;
 }
