--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -55,11 +55,65 @@
               <object class="GtkBox" id="main-box">
                 <property name="vexpand">True</property>
                 <child>
-                  <object class="GtkStackSidebar" id="side-bar">
-                    <property name="css-classes">stacksidebar</property>
-                    <property name="margin-bottom">25</property>
-                    <property name="margin-top">25</property>
-                    <property name="stack">business-stack</property>
+                  <object class="GtkBox">
+                    <property name="css-classes">side_panel</property>
+                    <property name="homogeneous">True</property>
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">20</property>
+                    <property name="vexpand">True</property>
+                    <child>
+                      <object class="GtkStackSidebar" id="side-bar">
+                        <property name="css-name">stack_sidebar</property>
+                        <property name="margin-bottom">100</property>
+                        <property name="margin-top">50</property>
+                        <property name="stack">business-stack</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkGrid">
+                        <property name="column-homogeneous">True</property>
+                        <property name="margin-bottom">30</property>
+                        <property name="margin-end">10</property>
+                        <property name="margin-start">10</property>
+                        <property name="row-homogeneous">True</property>
+                        <property name="row-spacing">20</property>
+                        <property name="valign">end</property>
+                        <child>
+                          <object class="GtkButton" id="print-button">
+                            <property name="css-classes">outlined_button</property>
+                            <property name="label">Print</property>
+                            <property name="valign">center</property>
+                            <layout>
+                              <property name="column">0</property>
+                              <property name="row">0</property>
+                            </layout>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="save-button">
+                            <property name="css-classes">save_button</property>
+                            <property name="css-name">save_button</property>
+                            <property name="label">Stoor</property>
+                            <property name="valign">center</property>
+                            <layout>
+                              <property name="column">0</property>
+                              <property name="row">2</property>
+                            </layout>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="email-button">
+                            <property name="css-classes">outlined_button</property>
+                            <property name="label">E-pos</property>
+                            <property name="valign">center</property>
+                            <layout>
+                              <property name="column">0</property>
+                              <property name="row">1</property>
+                            </layout>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
@@ -526,7 +580,7 @@
                                       <property name="column">0</property>
                                       <property name="column-span">2</property>
                                       <property name="row">8</property>
-                                      <property name="row-span">7</property>
+                                      <property name="row-span">6</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -539,7 +593,7 @@
                                       <property name="column">2</property>
                                       <property name="column-span">2</property>
                                       <property name="row">8</property>
-                                      <property name="row-span">7</property>
+                                      <property name="row-span">6</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -592,7 +646,7 @@
                                     <layout>
                                       <property name="column">2</property>
                                       <property name="column-span">2</property>
-                                      <property name="row">15</property>
+                                      <property name="row">14</property>
                                       <property name="row-span">2</property>
                                     </layout>
                                   </object>
@@ -1137,4 +1191,5 @@
     <property name="title">Waarskuwing</property>
     <property name="transient-for">main-window</property>
   </object>
+  <object class="GtkButton"/>
 </interface>
